Added images, created initial slot machine design.

--- a/Slot Machine/index.html
+++ b/Slot Machine/index.html
@@ -1,9 +1,18 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <title></title>
+    <meta charset="utf-8" />
+    <title>Patrick's Slot Machine</title>
+    <!-- CSS Section -->
+    <link href="css/main.css" rel="stylesheet" />
 </head>
 <body>
-
+    <canvas id="myCanvas" height="495" width="495">
+        Your browser doesn't support the canvas element.
+    </canvas>
+    <!-- JavaScript Lives Here -->
+    <script src="Scripts/js/createjs-2013.12.12.min.js"></script>
+    <script src="Scripts/js/slotMachine.js"></script>
+    <script>init();</script>
 </body>
 </html>
