Updated and added images, fixed site structure

--- a/Slot Machine/index.html
+++ b/Slot Machine/index.html
@@ -11,8 +11,8 @@
         Your browser doesn't support the canvas element.
     </canvas>
     <!-- JavaScript Lives Here -->
-    <script src="Scripts/js/createjs-2013.12.12.min.js"></script>
-    <script src="Scripts/js/slotMachine.js"></script>
-    <script>init();</script>
+    <script src="Scripts/js/easeljs-0.7.1.min.js"></script>
+    <script src="Scripts/js/main.js"></script>
+    <script>initialize();</script>
 </body>
 </html>
