--- a/Slot Machine/index.html
+++ b/Slot Machine/index.html
@@ -12,6 +12,7 @@
     </canvas>
     <!-- JavaScript Lives Here -->
     <script src="Scripts/js/easeljs-0.7.1.min.js"></script>
+    <script src="Scripts/js/jquery.js"></script>
     <script src="Scripts/js/main.js"></script>
     <script>initialize();</script>
 </body>
