--- a/Slot Machine/index.html
+++ b/Slot Machine/index.html
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿<!--
+     File: index.html
+     Author: Patrick Richey
+     Last Modified By: Patrick Richey
+     Last Modified Date: October 28, 2014
+     Description: The index page contains the canvas where the slot machine is drawn
+ -->
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
